fix(elevation): fixing elevation z-index level

--- a/packages/mokui-elevation/mokui-elevation.css
+++ b/packages/mokui-elevation/mokui-elevation.css
@@ -6,7 +6,6 @@
         content: "";
 
         position: absolute;
-        z-index: -1;
         top: 0;
         left: 0;
 
